# bill-keeper_api

./: .gitignore  AGENTS.md  Cargo.toml  \  flake.nix  rotate_logs.sh  schema.sql  seed_data.sql
src/: main.rs
src/auth/: mod.rs
src/db/: mod.rs
src/handlers/: application_reports.rs  bills.rs  data_groups.rs  ear.rs  expenses.rs  images.rs  mod.rs  reports.rs  summaries.rs  utild.rs
src/helpers/: helpers.rs
src/middleware/: auth.rs  logging.rs
src/models/: entities.rs  mod.rs  requests.rs  responses.rs
src/routes/: mod.rs
src/services/: image_processor.rs  mod.rs  pdf_converter.rs
tests/: e2e.rs
tests/src/: config.rs  db.rs  error.rs  helpers.rs  mod.rs  server.rs
tests/src/handlers/: bills.rs  data_groups.rs  expenses.rs  mod.rs
tests/test_docs/: test_csv.csv
