[package]
name = "bills_to_db"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-multipart = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
rust_decimal = { version = "1.36", features = ["serde", "db-tokio-postgres"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.149"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
pdf2image = "0.1"
image = "0.25"
dotenv = "0.15"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
dotenv = "0.15"
